# DataHubHub

./: .gitignore  .replit  README.md  app.py  huggingface-spacefile  main.py  pyproject.toml  replit.nix  test_app.py
.github/workflows/: huggingface-workflow.yml
.streamlit/: config.toml
assets/: custom.css
attached_assets/: Pasted-Below-is-a-design-proposal-for-a-Hugging-Face-based-system-that-lets-users-fine-tune-a-code-generati-1740904225626.txt  Pasted-For-a-robust-foundation-you-ll-want-to-configure-a-set-of-tools-that-catch-errors-early-maintain-c-1740904212802.txt
components/: code_quality.py  dataset_preview.py  dataset_statistics.py  dataset_uploader.py  dataset_validation.py  dataset_version_control.py  dataset_visualization.py
components/fine_tuning/: __init__.py  finetune_ui.py  model_interface.py
database/: __init__.py  models.py  operations.py  version_control.py
database/data/: mlmanager.db
utils/: dataset_utils.py  huggingface_integration.py  smolagents_integration.py
